--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,11 @@
             <artifactId>problem-spring-web</artifactId>
             <version>0.27.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
