--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,22 @@ spring:
       path: /swagger-ui.html
     api-docs:
       path: /api-docs
+  data:
+    redis:
+      host: ${SPRING_REDIS_HOST:localhost}
+      port: ${SPRING_REDIS_PORT:6379}
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: abc
+    password: abc
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 logging:
   level:
     org.hibernate.orm.connections.pooling: ERROR
