--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,8 @@ spring:
           auth: true
           starttls:
             enable: true
+  liquibase:
+    change-log: classpath:liquibase/master.xml
 logging:
   level:
     org.hibernate.orm.connections.pooling: ERROR
